# Proyectos-Programaci-n_2

./: README.md
Programación 2/2024-1/Laboratorio_01/Parte1_CrearBiblioteca/Biblioteca_Compilada_2024_1/: CMakeLists.txt
Programación 2/2024-1/Laboratorio_01/Parte1_CrearBiblioteca/Biblioteca_Compilada_2024_1/Biblioteca/: Sobrecargas.hpp
Programación 2/2024-1/Laboratorio_01/Parte1_CrearBiblioteca/Fuentes_Biblioteca_2024_1/: main.cpp
Programación 2/2024-1/Laboratorio_01/Parte1_CrearBiblioteca/Fuentes_Biblioteca_2024_1/Biblioteca/: Utils.h
Programación 2/2024-1/Laboratorio_01/Parte1_CrearBiblioteca/Prueba_Biblioteca_Compilada_2024_1/: CMakeLists.txt  main.cpp
Programación 2/2024-1/Laboratorio_06/Parte1_Clases/: CMakeLists.txt  main.cpp
Programación 2/2024-1/Laboratorio_06/Parte1_Clases/Bibliotecas/: Biblioteca.cpp  Biblioteca.hpp  Espacio.cpp  Espacio.hpp  Estante.cpp  Estante.hpp  Libro.cpp  Libro.hpp  Utils.hpp
Programación 2/2024-1/Laboratorio_06/Parte2_Biblioteca/: CMakeLists.txt  main.cpp
Programación 2/2024-1/Laboratorio_06/Parte2_Biblioteca/Bibliotecas/: Biblioteca.cpp  Biblioteca.hpp  Espacio.hpp  Estante.hpp  Libro.hpp  Utils.hpp
Programación 2/2024-1/Laboratorio_07/: CMakeLists.txt  main.cpp
Programación 2/2024-1/Laboratorio_07/Bibliotecas/: Biblioteca.cpp  Biblioteca.hpp  Enciclopedia.cpp  Enciclopedia.hpp  Espacio.cpp  Espacio.hpp  Estante.cpp  Estante.hpp  EstanteHorizontal.cpp  EstanteHorizontal.hpp  EstanteVertical.cpp  EstanteVertical.hpp  Libro.cpp  Libro.hpp  Novela.cpp  Novela.hpp
Programación 2/2024-1/Laboratorio_08/: CMakeLists.txt  main.cpp
Programación 2/2024-1/Laboratorio_08/Bibliotecas/: AperturaDeLecturaYEscrituraArchivos.cpp  AperturaDeLecturaYEscrituraArchivos.hpp  Biblioteca.cpp  Biblioteca.hpp  Enciclopedia.cpp  Enciclopedia.hpp  Estante.cpp  Estante.hpp  Libro.cpp  Libro.hpp  Lista.cpp  Lista.hpp  Nodo.cpp  Nodo.hpp  Novela.cpp  Novela.hpp  Revista.cpp  Revista.hpp  Utils.hpp
Programación 2/2024-2/Laboratorio_05/: CMakeLists.txt  main.cpp
Programación 2/2024-2/Laboratorio_05/Bibliotecas/: BibliotecaGenerica.cpp  BibliotecaGenerica.h  ListaConEnteros.cpp  ListaConEnteros.h  ListaConRegistros.cpp  ListaConRegistros.h  Utils.hpp
Programación 2/2024-2/Laboratorio_08/Parte_1/: CMakeLists.txt  main.cpp
Programación 2/2024-2/Laboratorio_08/Parte_1/Bibliotecas/: Bebida.cpp  Bebida.hpp  Cola.cpp  Cola.hpp  DetalleComanda.cpp  DetalleComanda.hpp  Entrada.hpp  Nodo.cpp  Nodo.hpp  PlatoFondo.hpp  Producto.hpp  Restaurante.cpp  Restaurante.hpp  Utils.hpp
Programación 2/2024-2/Laboratorio_08/Parte_2/: CMakeLists.txt  main.cpp
Programación 2/2024-2/Laboratorio_08/Parte_2/Bibliotecas/: Bebida.hpp  Cola.hpp  DetalleComanda.cpp  DetalleComanda.hpp  Entrada.cpp  Entrada.hpp  Nodo.hpp  PlatoFondo.cpp  PlatoFondo.hpp  Producto.cpp  Producto.hpp  Restaurante.cpp  Restaurante.hpp  Utils.hpp
Programación 2/2025-1/Laboratorio_02/: CMakeLists.txt  main.cpp
Programación 2/2025-1/Laboratorio_02/Biblioteca/: Funciones.hpp  FuncionesAuxiliares.cpp  FuncionesAuxiliares.hpp  Sobrecargas.cpp  Sobrecargas.hpp  Utils.hpp  conductores.hpp  faltas.hpp  infracciones.hpp
Programación 2/2025-1/Laboratorio_04/: CMakeLists.txt  main.cpp
Programación 2/2025-1/Laboratorio_04/Bibliotecas/: BibliotecaEnteros.cpp  BibliotecaEnteros.h  BibliotecaGenerica.cpp  BibliotecaGenerica.h  BibliotecaRegistros.cpp  BibliotecaRegistros.h  Utils.hpp
Programación 2/2025-1/Laboratorio_06/: main.cpp
Programación 2/2025-1/Laboratorio_06/Bibliotecas/: Empresa.cpp  Infraccion.cpp  MinisterioDeTransporte.cpp
Programación 2/2025-1/Laboratorio_08/Parte_1/: CMakeLists.txt  main.cpp
Programación 2/2025-1/Laboratorio_08/Parte_1/Bibliotecas/: Arbol.cpp  Arbol.hpp  Central.cpp  Central.hpp  Dron.cpp  Dron.hpp  DroneEstacionamiento.cpp  DroneEstacionamiento.hpp  DroneSemaforo.cpp  DroneSemaforo.hpp  DroneVelocidad.cpp  DroneVelocidad.hpp  Nodo.cpp  Nodo.hpp  Utils.hpp
Programación 2/2025-1/Laboratorio_08/Parte_2/: CMakeLists.txt  main.cpp
Programación 2/2025-1/Laboratorio_08/Parte_2/Bibliotecas/: Arbol.cpp  Arbol.hpp  Central.cpp  Central.hpp  Dron.cpp  Dron.hpp  DroneEstacionamiento.cpp  DroneEstacionamiento.hpp  DroneSemaforo.cpp  DroneSemaforo.hpp  DroneVelocidad.cpp  DroneVelocidad.hpp  Nodo.hpp  Utils.hpp
Programación 2/2025-1/Laboratorio_09/: CMakeLists.txt  main.cpp
Programación 2/2025-1/Laboratorio_09/Bibliotecas/: Empresa.cpp  Empresa.hpp  Infraccion.cpp  Infraccion.hpp  MinisterioDeTransporte.cpp  MinisterioDeTransporte.hpp  Multa.cpp  Multa.hpp  Utils.hpp  Vehiculo.cpp  Vehiculo.hpp
Programación 2/Laboratorio_02/: CMakeLists.txt  main.cpp
Programación 2/Laboratorio_02/Biblioteca/: Funciones.cpp  FuncionesAuxiliares.hpp  Sobrecargas.cpp  Sobrecargas.hpp  faltas.hpp
Programación 2/Laboratorio_06/: CMakeLists.txt
Programación 2/Laboratorio_06/Bibliotecas/: Empresa.hpp  Infraccion.hpp  MinisterioDeTransporte.hpp  Multa.cpp  Multa.hpp
Programación_2/2024-1/Parte1_CrearBiblioteca/Fuentes_Biblioteca_2024_1/: CMakeLists.txt
Programación_2/2024-1/Parte1_CrearBiblioteca/Fuentes_Biblioteca_2024_1/Biblioteca/: Sobrecargas.cpp
